; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_asn1_encode_test.c_do_print_item.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_asn1_encode_test.c_do_print_item.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i32 }

@bio_err = common dso_local global i32 0, align 4
@DATA_BUF_SIZE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*)* @do_print_item to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @do_print_item(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 8
  %10 = call i32* @ASN1_ITEM_ptr(i32 %9)
  store i32* %10, i32** %4, align 8
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = icmp sle i64 %13, 256
  %15 = zext i1 %14 to i32
  %16 = call i32 @OPENSSL_assert(i32 %15)
  %17 = call i32* @OPENSSL_malloc(i64 256)
  store i32* %17, i32** %5, align 8
  %18 = icmp eq i32* %17, null
  br i1 %18, label %19, label %20

19:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %35

20:                                               ; preds = %1
  %21 = load i32*, i32** %5, align 8
  %22 = bitcast i32* %21 to i8*
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = trunc i64 %25 to i32
  %27 = call i32 @RAND_bytes(i8* %22, i32 %26)
  %28 = load i32, i32* @bio_err, align 4
  %29 = load i32*, i32** %5, align 8
  %30 = load i32*, i32** %4, align 8
  %31 = call i32 @ASN1_item_print(i32 %28, i32* %29, i32 0, i32* %30, i32* null)
  store i32 %31, i32* %6, align 4
  %32 = load i32*, i32** %5, align 8
  %33 = call i32 @OPENSSL_free(i32* %32)
  %34 = load i32, i32* %6, align 4
  store i32 %34, i32* %2, align 4
  br label %35

35:                                               ; preds = %20, %19
  %36 = load i32, i32* %2, align 4
  ret i32 %36
}

declare dso_local i32* @ASN1_ITEM_ptr(i32) #1

declare dso_local i32 @OPENSSL_assert(i32) #1

declare dso_local i32* @OPENSSL_malloc(i64) #1

declare dso_local i32 @RAND_bytes(i8*, i32) #1

declare dso_local i32 @ASN1_item_print(i32, i32*, i32, i32*, i32*) #1

declare dso_local i32 @OPENSSL_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
